<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sort"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/action_email_sort"
                    android:title="@string/email" />
                <item
                    android:id="@+id/action_social_sort"
                    android:title="@string/social" />
                <item
                    android:id="@+id/action_wallet_sort"
                    android:title="@string/wallet" />
                <item
                    android:id="@+id/action_app_sort"
                    android:title="@string/app" />
                <item
                    android:id="@+id/action_website_sort"
                    android:title="@string/website" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all" />
</menu>