<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarSettings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            android:elevation="@null"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="21sp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/createPassword"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:text="@string/create_login_password"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/changePassword"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/change_login_password"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/createPassword" />

    <TextView
        android:id="@+id/resetPassword"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/reset_password"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />

    <TextView
        android:id="@+id/info"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/about_app"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_about"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintStart_toStartOf="@+id/createPassword"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>